--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Titans</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Machine learning</h1>
+    
+    <h2> Machine learning</h2>
     
 </body>
 </html>
