--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
     <h2> Machine learning</h2>
     
 </body>
